--- a/work/app/sass/main.sass
+++ b/work/app/sass/main.sass
@@ -42,4 +42,20 @@ body
 	max-width: 100%
 	height: auto
 
+.block
+	margin-bottom: 50px
+.answer
+	display: flex
+	justify-content: center
+	margin-top: 20px
+	.a
+		cursor: pointer
+		padding: 10px 25px
+		margin: 0 10px
+		background-color: #f8f8f8
+		transition: color .325s ease-in-out, background-color .325s ease-in-out
+		&.active
+			background-color: #9b59b6
+			color: #ffffff
+
 @import "media" // Всегда в конце
