--- a/work/app/sass/_fonts.sass
+++ b/work/app/sass/_fonts.sass
@@ -1,4 +1,4 @@
 @import "_mixins/font-face"
-
-+font-face("roboto-example", "../fonts/RobotoRegular/RobotoRegular")
-+font-face("roboto-example", "../fonts/RobotoBold/RobotoBold", bold)
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,300i,400,500,700&subset=cyrillic-ext')
+// +font-face("roboto-example", "../fonts/RobotoRegular/RobotoRegular")
+// +font-face("roboto-example", "../fonts/RobotoBold/RobotoBold", bold)
