--- a/work/app/sass/main.sass
+++ b/work/app/sass/main.sass
@@ -25,22 +25,46 @@ body input:required:valid,
 body textarea:required:valid
 	color: #666
 
-html, body
-	height: 100%
 
 body
-	font-size: 16px
+	font-size: 18px
+	font-weight: 300
 	min-width: 320px
 	position: relative
-	line-height: 1.75
+	line-height: 1.5555
 	font-family: $default-font
 	overflow-x: hidden
 	opacity: 1
+	color: #333333
 
 .img-responsive
 	display: block
 	max-width: 100%
 	height: auto
+.h
+	// font-family: $title-font
+	font-weight: 300
+
+
+
+
+
+
+
+
+
+#fanketa
+	.uk-form-label
+		font-size: 18px
+		font-weight: 400
+	label		
+		margin-right: 15px
+	.uk-checkbox:checked,
+	.uk-checkbox:indeterminate,
+	.uk-radio:checked
+		background-color: $accent
+
+
 
 .block
 	margin-bottom: 50px
