--- a/work/app/sass/main.sass
+++ b/work/app/sass/main.sass
@@ -47,10 +47,58 @@ body
 
 
 
+.header
+	position: relative
+	height: 100vh
+	background-image: url('../img/3.jpg')
+	background-repeat: no-repeat
+	background-position: center
+	background-size: cover
+	&:before
+		position: absolute
+		content: ''
+		left: 0
+		top: 0
+		width: 100%
+		height: 100%
+		background-color: rgba($accent, .25)
+	.header-block
+		position: absolute
+		background-color: rgba($accent, .95)
+		width: 50%
+		color: #ffffff
+		bottom: 0
+		right: 0
+		// top: 50%
+		// transform: translateY(-50%)
+		text-align: center
+		padding: 50px 25px
+		.header-title
+			color: #ffffff
+	.menu
+		position: relative
+		// background-color: rgba(0,0,0, .25)
+		background-color: rgba(255,255,255, .25)
+	.logo
+		width: 150px
+	.uk-navbar-nav > li > a
+		font-size: 16px
+		font-weight: 400
+		color: #333333
+	.uk-navbar-nav > li:hover > a
+		color: $accent
 
 
-
-
+.h-title
+	text-align: center
+	font-size: 3em
+	margin-bottom: 50px
+.section
+	position: relative
+	padding: 100px 0
+	p
+		font-size: 20px
+		text-align: center
 
 
 #fanketa
@@ -63,6 +111,24 @@ body
 	.uk-checkbox:indeterminate,
 	.uk-radio:checked
 		background-color: $accent
+	.next-block
+		display: inline-block
+		padding: 10px 25px		
+		background-color: #f3f3f3
+		transition: color .25s ease-in-out, background-color .3s ease-in-out
+		&.active
+			cursor: pointer
+			background-color: $accent
+			color: #ffffff
+
+	.block-b,
+	.block-c
+		display: none
+
+.section-anketa
+	background-color: #f8f8f8
+		
+
 
 
 
