--- a/work/app/sass/main.sass
+++ b/work/app/sass/main.sass
@@ -98,19 +98,27 @@ body
 	padding: 100px 0
 	p
 		font-size: 20px
-		text-align: center
+		text-align: justify
+		// text-align: center
 
 
 #fanketa
 	.uk-form-label
-		font-size: 18px
-		font-weight: 400
+		font-size: 20px
+		color: $accent
+		// font-weight: 400
+	.uk-form-controls
+		padding-left: 25px
+		padding-top: 15px
 	label		
-		margin-right: 15px
+		margin-right: 25px
 	.uk-checkbox:checked,
 	.uk-checkbox:indeterminate,
 	.uk-radio:checked
 		background-color: $accent
+	.uk-radio
+		margin-right: 5px
+		border-radius: 0
 	.next-block
 		display: inline-block
 		padding: 10px 25px		
