--- a/work/app/sass/main.sass
+++ b/work/app/sass/main.sass
@@ -135,6 +135,10 @@ body
 
 .section-anketa
 	background-color: #f8f8f8
+	background-color: $accent
+.anketa-box
+	background-color: #fff
+	padding: 75px
 		
 
 
