--- a/work/app/sass/_media.sass
+++ b/work/app/sass/_media.sass
@@ -11,10 +11,24 @@
 @media only screen and (max-width : 992px)
 	/**/
 
+@media only screen and (max-width : 960px)
+	/**/
+	.list-maps
+		display: flex
+		flex-direction: row
+		flex-wrap: wrap
+		padding-bottom: 50px
+		div
+			width: 50%
+			text-align: center
+			&:before
+				left: 50%
+				transform: translateX(-50%)
 
 /* Small Devices, Tablets */
 @media only screen and (max-width : 768px)
 	/**/
+	
 
 
 /* Extra Small Devices, Phones */
