--- a/work/app/sass/main.sass
+++ b/work/app/sass/main.sass
@@ -36,6 +36,7 @@ body
 	overflow-x: hidden
 	opacity: 1
 	color: #333333
+	// background-image: url('../img/bgp.png')
 
 .img-responsive
 	display: block
@@ -78,13 +79,17 @@ body
 	.menu
 		position: relative
 		// background-color: rgba(0,0,0, .25)
-		background-color: rgba(255,255,255, .25)
+		background-color: rgba(255,255,255, .75)
+		// margin-top: 20px
+		// border-radius: 5px
+		// padding: 0 25px
 	.logo
-		width: 150px
+		width: 200px
 	.uk-navbar-nav > li > a
 		font-size: 16px
 		font-weight: 400
 		color: #333333
+		min-height: 125px
 	.uk-navbar-nav > li:hover > a
 		color: $accent
 
@@ -100,7 +105,9 @@ body
 		font-size: 20px
 		text-align: justify
 		// text-align: center
-
+.section-about
+	p
+		font-size: 22px
 
 #fanketa
 	.uk-form-label
@@ -134,12 +141,102 @@ body
 		display: none
 
 .section-anketa
+	position: relative
 	background-color: #f8f8f8
 	background-color: $accent
+	background-image: url('../img/banner_thumb_87.jpg')
+	background-repeat: no-repeat
+	background-size: cover
+	background-position: center
+	&:before
+		position: absolute
+		content: ''
+		left: 0
+		top: 0
+		width: 100%
+		height: 100%
+		background-color: rgba($accent, .5)
 .anketa-box
+	position: relative
 	background-color: #fff
 	padding: 75px
+	box-shadow: 0 0px 15px rgba(0,0,0, .2)
+.anketa-title
+	font-size: 2.5em
+	text-align: center
+
+
+.section-contacts
+	background-color: $accent
+	background-color: #fffbf9
+.c-grid
+	> div:first-child
+		display: flex
+		align-items: center
+		text-align: right
+.list-maps
+	padding: 100px 50px 100px 25px
+	a
+		position: relative
+		font-size: 24px
+		color: #ffffff
+		color: #333333
+		text-decoration: none
+		span
+			color: rgba(255,255,255, .4)
+			color: rgba($accent, .85)
+			display: block
+			font-size: 18px
+	> div
+		position: relative
+		padding-bottom: 20px
+		&:before
+			position: absolute
+			content: ''
+			height: 1px
+			width: 100px
+			right: 0
+			bottom: 10px
+			background-color: rgba(0,0,0, .14)
+			transition: width .35s ease-in-out, background-color .35s ease-in-out
+	> div.uk-active
+		&:before
+			width: 200px
+			background-color: rgba($accent, .85)
+.c-switcher
+	height: 100%
+	width: 100%
+	> div
+		width: 100%
+		height: 100%
+		min-height: 300px
+		background-repeat: no-repeat
+		background-size: cover
+		background-position: center
 		
+.paket-box
+	width: 100%
+	display: flex
+	justify-content: center
+	// flex-direction: row
+	.paket-item		
+		background-color: #fff
+		width: 320px
+		width: 50%
+		height: 400px
+		margin: 0 10px
+		border-radius: 5px
+		overflow: hidden
+		box-shadow: 0 0px 15px 5px rgba(0,0,0, .075)
+		transition: background-color .3s ease-in-out, color .25s ease-in-out
+		&-img
+			height: 200px
+			background-image: url('../img/banner_thumb_87.jpg')
+			background-repeat: no-repeat
+			background-size: cover
+			background-position: center
+		&:hover
+			background-color: $accent
 
 
 
@@ -159,5 +256,21 @@ body
 		&.active
 			background-color: #9b59b6
 			color: #ffffff
+
+.footer
+	background-color: $accent
+	border-top: 1px solid rgba(255,255,255, .15)
+	padding: 25px 0
+	.footer-logo
+		width: 85px
+		img
+			opacity: 0.5
+	.footer-name
+		font-size: 16px
+		color: rgba(255,255,255, .5)
+	.footer-box
+		display: flex
+		align-items: center
+		justify-content: space-between
 
 @import "media" // Всегда в конце
