--- a/work/app/sass/_media.sass
+++ b/work/app/sass/_media.sass
@@ -28,7 +28,21 @@
 /* Small Devices, Tablets */
 @media only screen and (max-width : 768px)
 	/**/
-	
+	.anketa-box
+		padding: 25px
+@media only screen and (max-width : 640px)
+	/**/
+	.paket-box
+		width: 100%
+		display: flex
+		justify-content: center
+		margin: 75px 0
+		flex-wrap: wrap
+		// flex-direction: column
+	.paket-item
+		width: 100%
+		max-width: 320px
+		margin-bottom: 20px
 
 
 /* Extra Small Devices, Phones */
