--- a/work/app/sass/main.sass
+++ b/work/app/sass/main.sass
@@ -27,7 +27,7 @@ body textarea:required:valid
 
 
 body
-	font-size: 18px
+	font-size: 16px
 	font-weight: 300
 	min-width: 320px
 	position: relative
@@ -51,6 +51,7 @@ body
 .header
 	position: relative
 	height: 100vh
+	min-height: 700px
 	background-image: url('../img/3.jpg')
 	background-repeat: no-repeat
 	background-position: center
@@ -82,11 +83,21 @@ body
 		position: relative
 		// background-color: rgba(0,0,0, .25)
 		background-color: rgba(255,255,255, .75)
+		padding: 10px 0
 		// margin-top: 20px
 		// border-radius: 5px
 		// padding: 0 25px
 	.logo
-		width: 200px
+		img
+			width: 150px
+	.ul-lang
+		li
+			// background-color: green
+			a
+				border-radius: 5px
+				min-height: 50px!important
+				background-color: $accent
+				color: #ffffff!important
 	.uk-navbar-nav > li > a
 		font-size: 16px
 		font-weight: 400
@@ -104,12 +115,12 @@ body
 	position: relative
 	padding: 100px 0
 	p
-		font-size: 20px
+		font-size: 18px
 		text-align: justify
 		// text-align: center
 .section-about
 	p
-		font-size: 22px
+		font-size: 18px
 
 #fanketa
 	.uk-form-label
